force-app/main/default/objects/KimbleOne__ShareAction__c/KimbleOne__ShareAction__c.object-meta.xml
<CustomObject>
    <label>Share Action</label>
    <nameField>
        <label>Share Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Share Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>