force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__AccessLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AccessLevel__c</fullName>
    <label>Access Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>