force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__AsOwner__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AsOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>As Owner</label>
    <type>Checkbox</type>
</CustomField>