force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ContextField__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextField__c</fullName>
    <label>Context Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>