force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ContextObject__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextObject__c</fullName>
    <label>Context Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>