force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ContextPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContextPath__c</fullName>
    <label>Context Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>