force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ScopeCriteria__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ScopeCriteria__c</fullName>
    <label>Scope Criteria</label>
    <type>TextArea</type>
</CustomField>