force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ScopeField__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ScopeField__c</fullName>
    <label>Scope Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>