force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ScopeObject__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ScopeObject__c</fullName>
    <label>Scope Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>