force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ScopePath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ScopePath__c</fullName>
    <label>Scope Path</label>
    <type>TextArea</type>
</CustomField>