force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ShareObject__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShareObject__c</fullName>
    <label>Share Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>