force-app/main/default/objects/KimbleOne__ShareAction__c/fields/KimbleOne__ShareRowCause__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShareRowCause__c</fullName>
    <label>Share Row Cause</label>
    <length>40</length>
    <type>Text</type>
</CustomField>